[package]
name = "alioth"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
drm = "0.9.0"
drm-fourcc = "2.2.0"
smithay = { git = "https://github.com/Smithay/smithay", version = "0.3.0", rev = "e241ccbb" }
smithay-drm-extras = { git = "https://github.com/Smithay/smithay" }
thiserror = "1.0.47"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
